crates/carta/tests/snapshots/golden_e2e__mediawiki__html__bare-url-encoding.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>Link <a
href="http://example.com/a%5Bb%5Dc%7Cd">http://example.com/a[b]c|d</a>
here.</p>
