crates/carta/tests/snapshots/golden_e2e__mediawiki__html__bare-url-trailing-punctuation.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>See <a href="http://example.com/path">http://example.com/path</a>.
Also (http://example.org/a) end.</p>
