crates/carta/tests/snapshots/golden_e2e__mediawiki__html__behavior-switches.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>Lead paragraph after two switches.</p>
<p>A sentence with an inline switch removed.</p>
<p>__NOTOC__ stays literal here.</p>
