crates/carta/tests/snapshots/golden_e2e__mediawiki__html__block-html-tags.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<blockquote>
<p>Quoted text.</p>
</blockquote>
