crates/carta/tests/snapshots/golden_e2e__mediawiki__html__blockquote.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<blockquote>
<p>A quoted paragraph with <em>emphasis</em>.</p>
</blockquote>
