crates/carta/tests/snapshots/golden_e2e__mediawiki__html__bullet-lists.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<ul>
<li>one</li>
<li>two
<ul>
<li>two a</li>
<li>two b</li>
</ul></li>
<li>three</li>
</ul>
