crates/carta/tests/snapshots/golden_e2e__mediawiki__html__code-blocks.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<pre class="python"><code>def f():
    return 1</code></pre>
<pre><code>plain preformatted
  text block</code></pre>
