crates/carta/tests/snapshots/golden_e2e__mediawiki__html__comment-boundaries.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>one two line.</p>
<p>three line.</p>
<p>four five.</p>
