crates/carta/tests/snapshots/golden_e2e__mediawiki__html__comments.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>before after</p>
<p>text after.</p>
