crates/carta/tests/snapshots/golden_e2e__mediawiki__html__definition-consecutive-terms.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<dl>
<dt>first<br />
second</dt>
<dd>
shared definition
</dd>
</dl>
